syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.morotsman.dixa.grcp";
option java_outer_classname = "PrimesProto";

package primes;

service PrimesService {
  rpc generatePrimes (PrimesRequest) returns (stream PrimesReply) {}
}

message PrimesRequest {
  int32 upTo = 1;
}

message PrimesReply {
  int64 prime = 1;
}
